--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panier - Les Recettes de Maman</title>
     <link rel="icon" href="photo/LOGO.jpeg" type="image/png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         .cart-container {
             max-width: 800px;
