--- a/cakes.html
+++ b/cakes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cakes - Les Recettes de Maman</title>
     <link rel="icon" href="photo/LOGO.jpeg" type="image/png">
-    <link rel="stylesheet" href="stylles.css">
+    <link rel="stylesheet" href="style.css">
     <style>
     #back-to-top {
       position: fixed;
